--- a/style.css
+++ b/style.css
@@ -1,6 +1,45 @@
-header{
+
+body{
+    font-family: 'Montserrat',sans-serif;
+}
+
+.titulo-principal{
+  padding-left: 20px;
+}
+ .titulo-centralizado{
+    text-align: center;
+ }
+ p{
+    text-align: center;
+  }
+  
+  #missão{
+    font-size:20px
+  }
+  em strong{
+    color:red;
+  }
+  .itens {
+    font-style:italic
+  }
+  .beneficios {
+background: #ffff;
+padding: 20px;
+  }
+  
+  ul{
+   display: inline-block;
+   vertical-align: top;
+   width:20%;
+   margin-right: 15%;
+  }
+  .imagembeneficios{
+    width: 50%;
+  }
+  header{
+    
+  background-color:burlywood;
     padding: 20px 0;
-    background:#778899	
 }
 .caixa{
    position: relative;
@@ -30,7 +69,7 @@ nav a:hover {
     text-decoration: underline;
 }
 .produto{
-    width: 940px;
+    width: 930px;
     margin:0 auto;
     padding: 50px 0;
 }
@@ -78,13 +117,10 @@ footer{
     font-size: 13px;
     margin:20px;
 }
-main{
-    width: 840px;
-    margin: 0  auto;
+form {
+    margin:40px 0 ;
 }
-form{
-    margin: 40px  0;
-}
+
 form label,form legend {
     display:block;
     font-size: 20px;
@@ -92,7 +128,7 @@ form label,form legend {
 }
 
 .input-padrao{
-    display;block;
+    display:block;
     margin: 0 0 20px;
     padding:10px 25px;
     width:50%;
@@ -127,3 +163,108 @@ td,th{
     border: 1px solid black;
     padding:8px 15px ;
 }
+
+/*css da pagina inical*/
+.banner{
+    width: 100%;
+
+}
+.titulo-principal{
+    text-align: center;
+    font-size: 2em;
+    margin: 0 0 1em;
+    clear:left;
+}
+.principal{
+    padding:3em 0;
+    background: #FEFEFE;
+    width: 940px;
+    margin: 0  auto;
+}
+.principal p {
+    margin: 0 0 1em;
+}
+.principal strong{
+   font-weight: bold; 
+}
+.principal em{
+    font-style: italic;
+}
+.beneficios{
+    padding: 3em 0;
+    background: #888888;
+}
+.conteudo-beneficios{
+    width: 640px;
+    margin: 0 auto ;
+}
+.lista-beneficios{
+    width: 40% ;
+    display:inline-block;
+    vertical-align:top ;
+}
+
+.itens{
+    line-height: 1.5;
+}
+    .itens:first-child{
+    font-weight: bold;
+
+}
+.itens:before{
+    content:"★";
+}
+.imagem-beneficios{
+    width: 60%;
+    margin: 0 20px 20px 0;
+    opacity:1;
+    transition: 400ms;
+     box-shadow:10px 10px 5px 20px #0000 ;
+     float: right;
+}
+
+.imagem-beneficios:hover{
+    opacity: 0.3;
+}
+.utensilios{
+    width: 120px;
+    float: left;
+    margin: 0 20px 20px 0;
+    clear: left;
+}
+.mapa-conteudo{
+    width: 940px;
+    margin: 0  auto;
+}
+.mapa{
+    padding: 3em 0;
+    background: linear-gradient(#FEFEFE,#888888);
+}
+.mapa p{
+    margin:0 0 2em ;
+    text-align: center;
+}
+.video{
+  width: 560px;
+  margin: 2em auto;  
+}
+@media screen and (max-width:480px) {
+ .caixa, .principal,.conteudo-beneficios,.mapa-conteudo,.video{
+        width: auto;}
+ }
+       h1 {
+            text-align: center;
+
+        }
+        nav{
+            position: static;
+        }
+        .lista-beneficios,.imagem-beneficios {
+            width:100%;
+        }
+       
+        @media screen and(max-width:480px){
+            .input-padrao{
+                width: 100%;}
+            }
+    
